@@ -16,10 +16,10 @@ export class AnnotationTextTextComponent extends BaseControlComponent implements
   @Input() annotationAttribute;
   @Input() annotationValue;
   @Input() annotationDocumentAttribute;
-  @Input() attributeValue;
   @Input() cols;
   @Input() rows;
   @Input() broadcastedEvent: any = {};
+  attributeValue = "";
 
   super() { }
 
@@ -27,36 +27,42 @@ export class AnnotationTextTextComponent extends BaseControlComponent implements
   }
 
   ngOnChanges(changes) {
-    console.error("AnnotationTextTextComponent: Changes invoked: ", changes);
+    // We are interested only on broadcasted events...
+    if (!changes.hasOwnProperty("broadcastedEvent")) {
+      return;
+    }
+    if (changes.broadcastedEvent.currentValue.event != "sendDocumentAttribute") {
+      return;
+    }
+    if (changes.broadcastedEvent.currentValue.attributeName ==
+        this.annotationDocumentAttribute) {
+      // console.error("AnnotationTextTextComponent: Changes invoked: ", changes);
+      this.setElementValue(this.getAnnotationValue());
+    }
   }; /* ngOnChanges */
 
   onFocus() { // Called when element gained focus
     this.setElementValue(this.getAnnotationValue());
   };
+
   onBlur() { // Called when focus is lost
     this.setAnnotationValue(this.getElementValue());
   };
-  /*TODO: Set event sub. scope.$on('sendDocumentAttribute:'+scope.annotationDocumentAttribute, function(event, ann) {
-    setElementValue(getAnnotationValue());
-  });*/
+
   getElementValue() {
-    //TODO: Set retrieving of attribute values
-    /*if ("attributeValue" in scope) {
-      return scope.attributeValue;
-    }*/
-    return null;
+    return this.attributeValue;
   }; // getElementValue
-  
+
   setElementValue(value) {
     if (this.getElementValue() != value) {
       this.attributeValue = value;
     }
   }; // getElementValue
-  
+
   getAnnotationValue() {
     return this.getAnnotationAttribute().value;
   }; // getAnnotationValue
-  
+
   setAnnotationValue(value) {
     var annotation = this.getAnnotation();
     var index = this.getAnnotationAttributeIndex();
@@ -79,18 +85,63 @@ export class AnnotationTextTextComponent extends BaseControlComponent implements
       attr.name === this.annotationDocumentAttribute);
     return annotation.attributes.indexOf(attribute);
   }; // getAnnotationAttributeIndex
-  
+
   getAnnotationAttribute() {
     var annotation = this.getAnnotation();
     // return _.where(annotation.attributes, {name: this.annotationDocumentAttribute})[0];
     return annotation.attributes.find(attr =>
       attr.name === this.annotationDocumentAttribute);
   }; // getAnnotationAttribute
-  
+
   getAnnotation() {
-    var annotation = this.TextWidgetAPI.getAnnotationForDocumentAttribute(this.annotationDocumentAttribute);
+    var annotation = this.TextWidgetAPI.getAnnotationForDocumentAttribute(
+                                          this.annotationDocumentAttribute);
     if (typeof(annotation) != "undefined") {
       return annotation;
     }
+
+    // The annotation does not exists. We must add it...
+    var currentDocument = this.TextWidgetAPI.getCurrentDocument();
+    if (!currentDocument.hasOwnProperty("id")) {
+      // No document is open!
+      return null;
+    }
+    var annotation = {
+      _id:                this.ObjectId().toString(),
+      document_id:        currentDocument["id"],
+      collection_id:      currentDocument["collection_id"],
+      annotator_id:       currentDocument["annotator_id"],
+      document_attribute: this.annotationDocumentAttribute,
+      type:               this.annotationType,
+      spans:              [],
+      attributes:         [{
+        name:  this.annotationAttribute,
+        value: this.annotationValue
+      },{
+        name:  this.annotationDocumentAttribute,
+        value: ""
+      }]
+    };
+    // Save annotation to temp & our model...
+    this.tempAnnotationService.save(currentDocument["collection_id"],
+                             currentDocument["id"], annotation)
+      .then((response: any) => { 
+        if (response.success) { 
+          return annotation;
+        } else {
+          this.dialog.open(ErrorDialogComponent, {
+            data: new ConfirmDialogData("Error",
+            "Error during saving your annotation. Please refresh the page and try again.")
+          })
+        }
+      }, (error) => {
+        this.dialog.open(ErrorDialogComponent, {
+            data: new ConfirmDialogData("Error",
+            "Database error. Please refresh the page and try again.")
+          })
+      }
+    );
+    this.TextWidgetAPI.addAnnotation(annotation, false);
+    return annotation;
   }; // getAnnotation
 }
