@@ -37,12 +37,17 @@ export class DetectChangesModalComponent extends MainDialogComponent implements 
         if (response.success) {
           // var openCollection = _.findWhere(response.data, { id: this.documentFound.collection_id });
           // var openDocument   = _.findWhere(openCollection.children, { id: this.documentFound.document_id });
-          var openCollection = response.data.find(doc => doc.id === this.documentFound.collection_id);
+	  console.error("getData():", response.data);
+	  console.error("this.documentFound.collection_id:", this.documentFound.collection_id);
+          var openCollection = response.data.find(doc => doc.collection_id === this.documentFound.collection_id);
+	  console.error("openCollection:", openCollection);
           var openDocument   = openCollection.children.find(doc => doc.id === this.documentFound.document_id);
 
           this.annotationSchemaService.restore(this.documentFound.annotator_type)
             .then((response:any)=> {
-              if (response.success && typeof(response.savedAnnotationSchema) != "undefined" && typeof(response.annotationSchemaOptions)!="undefined") {
+              if (response.success &&
+                  typeof(response.savedAnnotationSchema) != "undefined" &&
+                  typeof(response.annotationSchemaOptions)!="undefined") {
                 this.TextWidgetAPI.disableIsRunning();
                 this.TextWidgetAPI.resetCallbacks();
 
